--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,6 +8,7 @@
     android:background="#FFFFFF"
     tools:context=".StatisticsFragment">
 
+    <!--   Title Spoiler Alert -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,30 +50,59 @@
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/profilePicture"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:src="@drawable/bird1_green"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:contentDescription="Profile picture"
-        android:clickable="true"
-        android:focusable="true"/>
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
+    <!--    Profile picture     -->
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-30dp"
-        android:textStyle="bold"
-        android:text="YOUR STATISTICS"
-        android:textSize="@dimen/label_text_size"
-        android:textAlignment="center"/>
+        android:layout_gravity="center"
+        android:layout_margin="20dp">
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        <!-- Main Profile Picture -->
+        <ImageView
+            android:id="@+id/profilePicture"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/bird1_green"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:contentDescription="Profile picture"
+            android:clickable="true"
+            android:focusable="true"/>
+
+        <!-- Edit Icon (overlayed on bottom right) -->
+        <ImageView
+            android:id="@+id/editIcon"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="45dp"
+            android:layout_marginRight="25dp"
+            android:src="@drawable/ic_edit"
+            android:contentDescription="Edit profile picture"/>
+
+        <TextView
+            android:id="@+id/birdNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ROSETTE"
+            android:textSize="@dimen/label_text_size"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:layout_gravity="top|center"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="15dp"
+            android:textStyle="bold"
+            android:text="YOUR STATISTICS"
+            android:textSize="@dimen/label_text_size"
+            android:textAlignment="center"/>
+
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
