--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,143 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="#FEFEFE"
     tools:context=".StatisticsFragment">
 
-    <!--   Title Spoiler Alert -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- Green circles -->
+    <View
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/green_faded_circle"
+        android:alpha="0.25"
+        android:translationX="-120dp"
+        android:translationY="-90dp" />
+    <View
+        android:layout_width="800dp"
+        android:layout_height="800dp"
+        android:alpha="0.25"
+        android:background="@drawable/green_faded_circle"
+        android:translationX="125dp"
+        android:translationY="400dp" />
+    <View
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:alpha="0.3"
+        android:background="@drawable/green_faded_circle"
+        android:translationX="340dp"
+        android:translationY="50dp" />
+
+    <!-- Yellow circles -->
+    <View
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:alpha="0.3"
+        android:background="@drawable/yellow_faded_circle"
+        android:translationX="-20dp"
+        android:translationY="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <View
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:alpha="0.3"
+        android:background="@drawable/yellow_faded_circle"
+        android:translationX="370dp"
+        android:translationY="40dp" />
+
+    <!-- Foreground layout -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="-20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
-        <TextView
-            android:id="@+id/titleText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SPO"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/exclamation"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-            android:id="@+id/exclamation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="!"
-            android:textColor="#00b215"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/titleText"
-            app:layout_constraintEnd_toStartOf="@+id/alert"
-            app:layout_constraintStart_toEndOf="@id/titleText"/>
-        <TextView
-            android:id="@+id/alert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LER ALERT"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/titleText"
-            app:layout_constraintStart_toEndOf="@id/exclamation"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:padding="0dp">
 
-    <!--    Profile picture     -->
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="20dp">
+        <!--   Title Spoiler Alert -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="-20dp">
 
-        <!-- Main Profile Picture -->
-        <ImageView
-            android:id="@+id/profilePicture"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:src="@drawable/bird1_green"
+            <TextView
+                android:id="@+id/titleText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SPO"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/exclamation"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/exclamation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="!"
+                android:textColor="#00b215"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/titleText"
+                app:layout_constraintEnd_toStartOf="@+id/alert"
+                app:layout_constraintStart_toEndOf="@id/titleText" />
+
+            <TextView
+                android:id="@+id/alert"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LER ALERT"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/titleText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/exclamation" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!--    Profile picture     -->
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:contentDescription="Profile picture"
-            android:clickable="true"
-            android:focusable="true"/>
+            android:layout_margin="20dp">
 
-        <!-- Edit Icon (overlayed on bottom right) -->
-        <ImageView
-            android:id="@+id/editIcon"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="45dp"
-            android:layout_marginRight="25dp"
-            android:src="@drawable/ic_edit"
-            android:contentDescription="Edit profile picture"/>
+            <!-- Main Profile Picture -->
+            <ImageView
+                android:id="@+id/profilePicture"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:clickable="true"
+                android:contentDescription="Profile picture"
+                android:focusable="true"
+                android:src="@drawable/bird1_green" />
 
-        <TextView
-            android:id="@+id/birdNameText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ROSETTE"
-            android:textSize="@dimen/label_text_size"
-            android:textStyle="bold"
-            android:textAllCaps="true"
-            android:layout_gravity="top|center"
-            android:layout_marginTop="16dp" />
+            <!-- Edit Icon (overlayed on bottom right) -->
+            <ImageView
+                android:id="@+id/editIcon"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="45dp"
+                android:contentDescription="Edit profile picture"
+                android:src="@drawable/ic_edit" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginBottom="15dp"
-            android:textStyle="bold"
-            android:text="YOUR STATISTICS"
-            android:textSize="@dimen/label_text_size"
-            android:textAlignment="center"/>
+            <TextView
+                android:id="@+id/birdNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:layout_marginTop="16dp"
+                android:text="ROSETTE"
+                android:textAllCaps="true"
+                android:textSize="@dimen/label_text_size"
+                android:textStyle="bold" />
 
-    </FrameLayout>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="15dp"
+                android:text="YOUR STATISTICS"
+                android:textAlignment="center"
+                android:textSize="@dimen/label_text_size"
+                android:textStyle="bold" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:padding="20dp"
-        android:background="@drawable/bottom_buttons">
+        </FrameLayout>
 
-        <Spinner
-            android:id="@+id/bar_graph_dropdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:spinnerMode="dropdown"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:entries="@array/bar_graph_sorting" />
-
-        <Space
-            android:id="@+id/spacer"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/bar_graph_dropdown"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="-15dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/bottom_buttons"
+            android:padding="20dp">
 
-        <com.github.mikephil.charting.charts.BarChart
-            android:layout_width="match_parent"
-            android:layout_height="280dp"
-            android:id="@+id/barchart"
-            app:layout_constraintTop_toBottomOf="@+id/spacer"
-            app:layout_constraintStart_toStartOf="parent" />
+            <Spinner
+                android:id="@+id/bar_graph_dropdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:entries="@array/bar_graph_sorting"
+                android:spinnerMode="dropdown"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Space
+                android:id="@+id/spacer"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bar_graph_dropdown" />
 
-    <include layout="@layout/bottom_bar"/>
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/barchart"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spacer" />
 
-</LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include layout="@layout/bottom_bar" />
+
+    </LinearLayout>
+
+</FrameLayout>
